# WXCS

./: .gitignore  .travis.yml  LICENSE  README.md  WXCS.cabal  cabal.config  example.conf  hue.sh  index.html
src/: Aoj.hs  App.hs  AppUtils.hs  Config.hs  HashColor.hs  Main.hs  Model.hs  ModelTypes.hs  OnlineJudge.hs  Route.hs  Submit.hs  Types.hs  Utils.hs  main.hs
src-exec/: Main.hs
src/OnlineJudge/: Aoj.hs  Codeforces.hs
static/css/: default.css  dracula.css  icpc.css  professional.css  uvcs_mode.css
template/: contest.hamlet  editcontest.hamlet  index.hamlet  layout.hamlet  problem.hamlet  ranking.hamlet  setcontest.hamlet  source.hamlet  standings.hamlet  statistics.hamlet  status.hamlet  user.hamlet
test/: AppSpec.hs  AppUtilsSpec.hs  ModelTypesSpec.hs  SpecHelper.hs  UtilsSpec.hs
