name: WXCS
version: 0.1.2
author: asi1024
synopsis: Wonderful eXciting Contest System
cabal-version: >= 1.10
build-type: Simple

library
    hs-source-dirs: src
    default-Language: Haskell2010
    build-depends: base >= 4 && < 5
                   , aeson == 0.8.0.2
                   , base64-bytestring == 1.0.0.1
                   , blaze-html == 0.7.0.3
                   , blaze-markup == 0.6.2.0
                   , bytestring == 0.10.4.1
                   , concurrent-extra == 0.7.0.9
                   , conduit == 1.2.3.1
                   , data-default == 0.5.3
                   , directory == 1.2.1.0
                   , filepath == 1.3.0.2
                   , http-conduit == 2.1.5
                   , http-types == 0.8.5
                   , mtl == 2.2.1
                   , monad-logger == 0.3.11.1
                   , persistent == 1.3.3
                   , persistent-template == 1.3.2.2
                   , resourcet == 1.1.3.3
                   , shakespeare == 2.0.2.1
                   , text == 1.2.0.3
                   , time == 1.5.0.1
                   , transformers == 0.4.2.0
                   , scotty == 0.9.0
                   , stm == 2.4.4
                   , wai-extra == 3.0.3.2
                   , wai-middleware-static == 0.6.0.1
                   , xml == 1.3.13

    exposed-modules:
      App
      AppUtils
      Config
      Model
      ModelTypes
      OnlineJudge
      OnlineJudge.Aoj
      Submit
      Types
      Utils

    ghc-options: -Wall -threaded -fno-warn-orphans

executable main
  hs-source-dirs: src-exec
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4 && < 5
                 , concurrent-extra == 0.7.0.9
                 , persistent-sqlite == 1.3.0.5
                 , mtl == 2.2.1
                 , scotty == 0.9.0
                 , stm == 2.4.4
                 , WXCS

  ghc-options: -Wall -threaded

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base >= 4 && < 5
                 , data-default
                 , hspec == 1.11.4
                 , QuickCheck == 2.7.6
                 , time == 1.5.0.1
                 , WXCS
  ghc-options: -Wall -fno-warn-orphans
