name: WXCS
version: 0.1.2
author: asi1024
synopsis: Wonderful eXciting Contest System
cabal-version: >= 1.10
build-type: Simple

library
    hs-source-dirs: src
    default-Language: Haskell2010
    build-depends: base >= 4 && < 5
                   , aeson == 0.8.0.0
                   , base64-bytestring == 1.0.0.1
                   , blaze-html == 0.8.1.1
                   , blaze-markup == 0.7.0.3
                   , bytestring == 0.10.4.0
                   , concurrent-extra == 0.7.0.8
                   , conduit == 1.2.6.6
                   , data-default == 0.5.3
                   , directory == 1.2.1.0
                   , filepath == 1.3.0.2
                   , hashable == 1.2.3.3
                   , http-conduit == 2.1.8
                   , http-types == 0.9
                   , old-locale == 1.0.0.6
                   , mtl == 2.2.1
                   , monad-control == 1.0.1.0
                   , monad-logger == 0.3.18
                   , persistent == 2.5
                   , persistent-template == 2.5.1.1
                   , process == 1.2.0.0
                   , resourcet == 1.1.7.4
                   , shakespeare == 2.0.1.1
                   , text == 1.2.2.1
                   , time == 1.4.2
                   , transformers == 0.4.1.0
                   , scotty == 0.11.0
                   , stm == 2.4.3
                   , wai == 3.2.1
                   , wai-extra == 3.0.15.1
                   , wai-middleware-static == 0.8.0
                   , xml == 1.3.13

    exposed-modules:
      App
      AppUtils
      Config
      HashColor
      Model
      ModelTypes
      OnlineJudge
      OnlineJudge.Aoj
      Submit
      Types
      Utils

    ghc-options: -Wall -threaded -fno-warn-orphans

executable main
  hs-source-dirs: src-exec
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4 && < 5
                 , concurrent-extra == 0.7.0.8
                 , persistent-sqlite == 2.5
                 , mtl == 2.2.1
                 , scotty == 0.11.0
                 , stm == 2.4.3
                 , WXCS

  ghc-options: -Wall -threaded

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base >= 4 && < 5
                 , data-default
                 , hspec == 2.0.0
                 , QuickCheck == 2.7.6
                 , time == 1.4.2
                 , WXCS
  ghc-options: -Wall -fno-warn-orphans
